fix margins, spacing

--- a/src/App.styles.css
+++ b/src/App.styles.css
@@ -57,3 +57,9 @@ body {
   z-index: 100;
   margin: 0;
 }
+
+@media (max-width: 768px) {
+  .container {
+    scroll-snap-type: none;
+  }
+}
