--- a/src/ui/Sections/Sections.styles.css
+++ b/src/ui/Sections/Sections.styles.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 80vw;
-  max-width: 80vw;
+  max-width: 1400px !important;
   margin: auto;
   align-items: flex-start;
   scroll-snap-align: start;
@@ -61,7 +61,8 @@
   scroll-snap-stop: always;
   font-size: 1.5rem;
   gap: 100px;
-  padding: 100px 0;
+  padding-top: 200px;
+  min-height: 50vh;
 }
 
 .section__heading-group {
@@ -89,13 +90,20 @@
 .tech-list {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 15px;
+}
+
+.tech-list__ul {
+  list-style: none;
+}
+
+.tech-list__ul li {
+  margin: 10px 0;
 }
 
 .section__projects__project {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 30px;
 }
 
 .section__image {
@@ -104,14 +112,21 @@
 
 @media (max-width: 768px) {
   .sections {
-    width: 90vw;
-    max-width: 90vw;
+    width: 85vw;
+  }
+
+  .sections-content {
+    scroll-snap-type: none;
   }
 
   .section {
     flex-direction: column;
     gap: 30px;
-    padding: 50px 0;
+    padding: 25px 0;
+    scroll-snap-align: none;
+    scroll-snap-stop: normal;
+    font-size: 1.2rem;
+    margin-top: 0;
   }
 
   .sections-nav {
@@ -119,14 +134,14 @@
     top: 0;
     width: 100%;
     min-width: unset;
-    scroll-snap-align: start;
-    scroll-snap-stop: always;
+    scroll-snap-align: none;
+    scroll-snap-stop: normal;
     padding-top: 10%;
   }
 
   .sections-nav h2 {
     text-align: left;
-    font-size: 2rem;
+    font-size: 3rem;
   }
 
   .section__content {
@@ -134,6 +149,7 @@
   }
 
   .tech-list {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
+    gap: 25px;
   }
 }
